edited the html and corrected the navbar overflow on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,21 +213,26 @@ a
     background-color: var(--white);
     left: 140%;
 }
-.navbar.sticky .nav-item a span,.navbar.sticky .nav-item a span::before,.navbar.sticky .nav-item a span::after
+.navbar.sticky .nav-item a span,
+.navbar.sticky .nav-item a span::before,
+.navbar.sticky .nav-item a span::after
 {
     background-color: var(--main-color);
 }
-.navbar .nav-item > .nav-link.active span,.navbar .nav-item:hover > .nav-link span
+.navbar .nav-item > .nav-link.active span,
+.navbar .nav-item:hover > .nav-link span
 {
     opacity: 1;
     visibility: visible;
     width: 60%;
 }
-.navbar .nav-item > .nav-link.active span::before,.navbar .nav-item:hover > .nav-link span::before
+.navbar .nav-item > .nav-link.active span::before,
+.navbar .nav-item:hover > .nav-link span::before
 {
     width: 20%;
 }
-.navbar .nav-item > .nav-link.active span::after,.navbar .nav-item:hover > .nav-link span::after
+.navbar .nav-item > .nav-link.active span::after,
+.navbar .nav-item:hover > .nav-link span::after
 {
     width: 15%;
 }
@@ -267,7 +272,7 @@ a
     top: 53%;
     left: 50px;
     transform: translateY(-53%);
-    border: 2px solid rgba(0,167,142,0.21);
+    border: 4px solid #00a78e;
     border-radius: 50px;
 }
 .header-social li a 
@@ -423,6 +428,12 @@ a
     letter-spacing:1px ;
     text-decoration: none;
 }
+
+.portfolio .portfolio-item-inner .portfolio-img .site
+{
+    margin: 5px 0;
+}
+
 
 
 /*===== contact =====*/
@@ -690,7 +701,7 @@ footer .copyright-text
     .home-section .home-text h1
     {
         font-size: 30px;
-        font-weight: 300;
+        font-weight: 600;
     }
 
     .home-section .home-text h4
@@ -709,4 +720,13 @@ footer .copyright-text
         display: none;
     }
 
+}
+
+@media(max-width: 376px)
+{
+    .home-section
+    {
+        padding-top: 120px;
+    }
+    
 }
